--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -5,4 +5,10 @@
         android:id="@+id/legal_notice"
         android:title="@string/legal_notice"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/preferences"
+        android:icon="@drawable/ic_settings_white_24dp"
+        android:title="@string/preferences"
+        app:showAsAction="ifRoom" />
 </menu>
