--- a/app/src/main/res/layout/row_category.xml
+++ b/app/src/main/res/layout/row_category.xml
@@ -7,8 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp"
+    android:padding="8dp"
     android:textColor="@android:color/black"
     android:textSize="16sp"
     app:layout_constraintEnd_toEndOf="parent"
