--- a/app/src/main/res/menu/fragment_posts.xml
+++ b/app/src/main/res/menu/fragment_posts.xml
@@ -5,4 +5,9 @@
         android:id="@+id/refresh"
         android:title="@string/refresh"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/search"
+        android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="never|collapseActionView" />
 </menu>
