--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -17,6 +17,7 @@
         android:id="@+id/galleryPhotoBar"
         android:layout_width="0dp"
         android:layout_height="100dp"
+        android:background="@color/transparent_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
