--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#034ea1</color>
     <color name="colorPrimaryDark">#023a7a</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorAccent">#FF9124</color>
     <color name="transparent_black">#bd000000</color>
 </resources>
