--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -4,7 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     tools:context="de.maxisma.allaboutsamsung.MainActivity">
+
+    <TextView
+        android:id="@+id/featured"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/postsSwipeRefresh"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/postsSwipeRefresh"
@@ -13,7 +29,7 @@
         app:layout_constraintBottom_toTopOf="@+id/searchButton"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/featured">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/postList"
