WIP: Dark theme

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -59,7 +59,9 @@
         android:id="@+id/postBottomNavigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="?attr/bottomNavigationBackground"
+        app:itemIconTint="?attr/bottomNavigationItemColor"
+        app:itemTextColor="?attr/bottomNavigationItemColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
