--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -26,7 +26,7 @@
         android:id="@+id/postsSwipeRefresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/searchButton"
+        app:layout_constraintBottom_toTopOf="@+id/searchButtonContainer"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/featured">
@@ -37,32 +37,44 @@
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <Button
-        android:id="@+id/categoryButton"
-        style="?android:attr/buttonBarButtonStyle"
+    <FrameLayout
+        android:id="@+id/categoryButtonContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:drawableStart="@drawable/ic_view_list_white_24dp"
-        android:padding="8dp"
-        android:text="@string/categories"
-        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/searchButton" />
+        app:layout_constraintStart_toEndOf="@+id/searchButtonContainer">
 
-    <Button
-        android:id="@+id/searchButton"
-        style="?android:attr/buttonBarButtonStyle"
+        <Button
+            android:id="@+id/categoryButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_view_list_white_24dp"
+            android:padding="8dp"
+            android:text="@string/categories"
+            android:textColor="@android:color/white" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/searchButtonContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:drawableStart="@drawable/ic_search_white_24dp"
-        android:padding="8dp"
-        android:text="@string/search"
-        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/categoryButton"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/categoryButtonContainer"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/searchButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_search_white_24dp"
+            android:padding="8dp"
+            android:text="@string/search"
+            android:textColor="@android:color/white" />
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
