Make overflow menu blue in dark theme

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,7 @@
 
     <style name="AppTheme.NoActionBar.PopupTheme.Dark" parent="ThemeOverlay.AppCompat.Dark">
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@color/darkColorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
