--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorAccent">#ff9124</color>
     <color name="transparent_black">#bd000000</color>
     <color name="light_gray">#cacaca</color>
+    <color name="lighter_gray">#e2e2e2</color>
 </resources>
