--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="rounded_corner_radius">3dp</dimen>
+    <dimen name="posts_widget_row_image_dimensions">75dp</dimen>
 </resources>
