--- a/app/src/main/res/xml/posts_widget_info.xml
+++ b/app/src/main/res/xml/posts_widget_info.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="80dp"
-    android:minHeight="80dp"
-    android:updatePeriodMillis="0"
-    android:previewImage="@drawable/ic_notification"
     android:initialLayout="@layout/posts_widget"
+    android:minHeight="140dp"
+    android:minWidth="160dp"
+    android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen">
-</appwidget-provider>
-
-<!-- TODO previewImage -->
+    android:updatePeriodMillis="0"
+    android:widgetCategory="home_screen" />
