--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="rounded_corner_radius">3dp</dimen>
     <dimen name="posts_widget_row_image_dimensions">75dp</dimen>
+    <dimen name="title_background_padding">4dp</dimen>
 </resources>
