Make white cards more visible

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_gray">#cacaca</color>
     <color name="lighter_gray">#e2e2e2</color>
     <color name="titleBackgroundColor">#80000000</color>
+    <color name="almostWhite">#eeeeee</color>
 </resources>
