--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,13 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme.Light" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="bottomNavigationBackground">@null</item>
         <item name="bottomNavigationItemColor">@null</item>
+
+        <item name="android:windowBackground">@color/almostWhite</item>
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat">
@@ -38,6 +39,8 @@
         <item name="titleTextColor">@android:color/white</item>
         <item name="subtitleTextColor">@android:color/white</item>
         <item name="popupTheme">@style/AppTheme.PopupTheme</item>
+
+        <item name="android:windowBackground">@color/almostWhite</item>
     </style>
 
     <style name="AppTheme.PopupTheme">
