Don't let content become too wide

--- a/app/src/main/res/layout/row_ad.xml
+++ b/app/src/main/res/layout/row_ad.xml
@@ -2,13 +2,14 @@
 <FrameLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:gravity="center_horizontal"
     android:layout_height="wrap_content">
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/rowAd"
-        android:layout_width="match_parent"
+        style="@style/MainContentWidthStyle"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        ads:adUnitId="@string/appmobPostListAdId"
-        ads:adSize="FLUID" />
+        ads:adSize="FLUID"
+        ads:adUnitId="@string/appmobPostListAdId" />
 </FrameLayout>
