--- a/app/src/main/res/layout/row_video.xml
+++ b/app/src/main/res/layout/row_video.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:elevation="2dp">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/rowVideoBackground"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/article_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@android:color/black" />
+    <android.support.constraint.ConstraintLayout
+        style="@style/MainContentWidthStyle"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:elevation="2dp">
 
-    <TextView
-        android:id="@+id/rowVideoTitle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ellipsize="end"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="bottom"
-        android:maxLines="3"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:text="TextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewT extViewText ViewTextViewTex tVi ewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewT extViewTextViewTextViewTextVi ewTextViewTextViewTextViewTextVie wTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewT extVi ewTextVie wTextView TextViewTextVi ewTextViewTextViewText ViewTextViewTextViewTextViewT extViewTextViewTextViewTextViewText ViewTextViewTextView" />
+        <ImageView
+            android:id="@+id/rowVideoBackground"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/article_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@android:color/black" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/rowVideoTitle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="bottom"
+            android:maxLines="3"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            tools:text="TextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewT extViewText ViewTextViewTex tVi ewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewT extViewTextViewTextViewTextVi ewTextViewTextViewTextViewTextVie wTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewT extVi ewTextVie wTextView TextViewTextVi ewTextViewTextViewText ViewTextViewTextViewTextViewT extViewTextViewTextViewTextViewText ViewTextViewTextView" />
+
+    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
