--- a/app/src/main/res/layout/activity_main_common.xml
+++ b/app/src/main/res/layout/activity_main_common.xml
@@ -18,6 +18,6 @@
         android:id="@+id/mainViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_gravity="center_horizontal" />
 
 </merge>
