--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,4 +70,8 @@
         <item name="android:windowIsFloating">false</item>
     </style>
 
+    <style name="MainContentWidthStyle">
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
 </resources>
