Fix code inspection warnings

--- a/app/src/main/res/layout/row_category.xml
+++ b/app/src/main/res/layout/row_category.xml
@@ -13,4 +13,5 @@
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    tools:text="Category #1" />
+    tools:text="Category #1"
+    tools:ignore="Overdraw" />
