--- a/app/src/main/res/layout/posts_widget_row.xml
+++ b/app/src/main/res/layout/posts_widget_row.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/posts_widget_row_image_dimensions"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/postsWidgetRowImage"
