--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -7,5 +7,6 @@
         android:id="@+id/categoryList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp"
+        android:scrollbars="vertical" />
 </android.support.constraint.ConstraintLayout>
