--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
+    <item name="match_parent" format="integer" type="dimen">-1</item>
+    <item name="wrap_content" format="integer" type="dimen">-2</item>
+
     <dimen name="rounded_corner_radius">3dp</dimen>
     <dimen name="posts_widget_row_image_dimensions">75dp</dimen>
     <dimen name="title_background_padding">4dp</dimen>
 
-    <!-- Overriding resource to make it non-private -->
-    <dimen name="bottom_navigation_height">56dp</dimen>
-    <dimen name="design_bottom_navigation_height" tools:override="true">@dimen/bottom_navigation_height</dimen>
+    <dimen name="bottom_navigation_height">@dimen/wrap_content</dimen>
 </resources>
