--- a/app/src/main/res/layout/row_ad.xml
+++ b/app/src/main/res/layout/row_ad.xml
@@ -2,12 +2,13 @@
 <FrameLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:gravity="center_horizontal"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal">
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/rowAd"
         style="@style/MainContentWidthStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         ads:adSize="FLUID"
