--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -7,6 +7,7 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/MainContentWidthStyle"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:elevation="2dp"
