--- a/app/src/main/res/values-w500dp/styles.xml
+++ b/app/src/main/res/values-w500dp/styles.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="MainContentWidthStyle">
-        <item name="android:layout_width">500dp</item>
+        <item name="android:maxWidth">500dp</item>
     </style>
 </resources>
