--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme.Light" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.Light.WithActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -25,6 +25,14 @@
 
         <item name="android:windowBackground">@color/darkColorPrimaryDark</item>
         <item name="android:textColor">@color/colorAccent</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.Dark.WithActionBar" parent="AppTheme.Dark">
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light">
@@ -41,6 +49,9 @@
         <item name="popupTheme">@style/AppTheme.PopupTheme</item>
 
         <item name="android:windowBackground">@color/almostWhite</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.PopupTheme">
@@ -70,8 +81,6 @@
         <item name="android:windowIsFloating">false</item>
     </style>
 
-    <style name="MainContentWidthStyle">
-        <item name="android:layout_width">match_parent</item>
-    </style>
+    <style name="MainContentWidthStyle" />
 
 </resources>
