--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.WithActionBar" parent="AppTheme">
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
+    </style>
+
     <style name="AppTheme.PopupTheme">
         <item name="android:textColor">@android:color/black</item>
     </style>
